fixed spacing on nav bar

--- a/src/nav.css
+++ b/src/nav.css
@@ -90,7 +90,7 @@
     color: rgb(214,214,214);
     width: 7em;
     height: 0.4em;
-    margin-right: 75vw;
+    margin-right: calc(75vw - 2em);
     margin-top: 1.25em;
     animation-name: line-1;
     animation-duration: 3s;
@@ -104,7 +104,7 @@
     color: rgb(214,214,214);
     width: 7em;
     height: 0.4em;
-    margin-right: 50vw;
+    margin-right: calc(50vw - 3em);
     margin-top: 1.25em;
     animation-name: line-2;
     animation-duration: 3s;
@@ -118,7 +118,7 @@
     color: rgb(214,214,214);
     width: 7em;
     height: 0.4em;
-    margin-right: 25vw;
+    margin-right: calc(25vw - 4em);
     margin-top: 1.25em;
     animation-name: line-3;
     animation-duration: 3s;
@@ -153,7 +153,7 @@
         content: '';
         display: block;
         position: absolute;
-        margin-right: 75vw;
+        margin-right: calc(75vw - 2em);
         margin-top: 2em;
     }
     95%{
@@ -205,7 +205,7 @@
         display: block;
         position: absolute;
         margin-top: 2em;
-        margin-right: 50vw;
+        margin-right: calc(50vw - 3em);
     }
     95%{
         height:0.4em;
@@ -256,7 +256,7 @@
         display: block;
         position: absolute;
         margin-top: 2em;
-        margin-right: 25vw;
+        margin-right: calc(25vw - 4em);
     }
     95%{
         height:0.4em;
